# TaskNote

./: .gitignore  CMakeLists.txt  README.md  app.rc  resource.qrc
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/core/: PageID.h  PageManager.cpp  PageManager.h  ThemeMode.h
src/data/: DatabaseManager.cpp  DatabaseManager.h  ScheduleItem.h
src/pages/: Calendar.cpp  Calendar.ui  Memo.cpp  Memo.h  Memo.ui  Setting.cpp  Setting.h  Setting.ui  ToDoList.cpp  ToDoList.h
src/pages/Calendar/: Calendar.cpp  Calendar.h  Calendar.ui  CalendarCellWidget.cpp  CalendarCellWidget.h
src/pages/Memo/: Memo.cpp  Memo.h  Memo.ui
src/pages/ToDoList/: ToDoList.cpp  ToDoList.h  ToDoList.ui  ToDoListItemWidget.cpp  ToDoListItemWidget.h
